--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "My App",
-  "start_url": "localhost:8081",
+  "start_url": "./index.html",
   "description": "A simple demo of Blockstack Auth",
   "icons": [{
-    "src": "http://localhost:8081/icon-192x192.png",
+    "src": "https://helloblockstack.com/icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
