--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "geolib": "^2.0.24",
     "hyperhtml": "^2.25.4",
+    "page": "^1.11.4",
     "webpack": "^4.30.0"
   },
   "devDependencies": {
