--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx karma start",
-    "testChrome": "npx karma start  karma.watch.conf.js",
+    "test:watch": "npx karma start  karma.watch.conf.js",
     "build": "npx webpack"
   },
   "author": "",
